--- a/src/interim.pug
+++ b/src/interim.pug
@@ -15,13 +15,13 @@ block content
             br
             | coaching
         p Soms heb je als school of team net even iets extra’s nodig: iemand die tijdelijk meedraait, structuur brengt of professionele begeleiding biedt. Onze mensen stappen in waar het nodig is. Of het nu gaat om leiderschap, teamontwikkeling of persoonlijke groei: wij staan naast je, denken mee en zetten beweging in gang. Tijdelijk aanwezig, blijvend van betekenis.
-      img(src="/images/content/interim/interim-page-header.svg" alt="Interim en coaching" width="557" height="380").page-header__image
+      img(src="images/interim-page-header.jpeg" alt="Interim en coaching" width="557" height="380").page-header__image
 
   section.section-mission
     .container
       +tabs(
         'Meer over onze hulp',
-        '/images/content/interim/lamp.svg',
+        'images/lamp.svg',
         [
           {
             title: 'Interim',
@@ -55,7 +55,7 @@ block content
   section.contact-block.interim
     .container
       .contact-block__item
-        img(src="/images/content/phone.svg" alt="alt" width="70" height="70")
+        img(src="images/phone.svg" alt="alt" width="70" height="70")
         .svg-wrapper
           +svg("wave-long-left").wave-long
           +svg("wave-name-left").wave-short
@@ -77,5 +77,5 @@ block content
         .svg-wrapper
           +svg("wave-name-right").wave-short
           +svg("wave-long-right").wave-long
-        img(src="/images/content/email.svg" alt="alt" width="70" height="70")
+        img(src="images/content/email.svg" alt="alt" width="70" height="70")
   
