--- a/src/pug/mixins/page-phone.pug
+++ b/src/pug/mixins/page-phone.pug
@@ -2,7 +2,7 @@
 //-     section.page-phone
 //-         .container.container-md
 //-             .page-phone__item
-//-                 img(src="/images/content/phone.svg" alt="alt" width="70" height="70")
+//-                 img(src="images/content/phone.svg" alt="alt" width="70" height="70")
 //-                 +svg("wave-long-left").visible-desktop.hidden
 //-             .page-phone__title
 //-                 h2 
@@ -19,4 +19,4 @@
 //-                 +svg("arrow-right-bold")
 //-             .page-phone__item
 //-                 +svg("wave-long-right").visible-desktop.hidden
-//-                 img(src="/images/content/email.svg" alt="alt" width="70" height="70")
+//-                 img(src="images/content/email.svg" alt="alt" width="70" height="70")
