--- a/src/pug/mixins/sliders.pug
+++ b/src/pug/mixins/sliders.pug
@@ -59,37 +59,37 @@ mixin slider-news()
     .swiper-wrapper
       .swiper-slide
         .card-news-slider
-          img(src="images/card-why3.jpg" alt="")
+          img(src="images/card-why3.jpeg" alt="")
           .card-news-slider__body 
             h3 Nieuwe poederlakinstallatie bij Signatekst N.V.
             a(href="/") Lees meer
       .swiper-slide
         .card-news-slider
-          img(src="images/card-why3.jpg" alt="")
+          img(src="images/card-why3.jpeg" alt="")
           .card-news-slider__body 
             h3 Nieuwe elektrisch verwarmde kameroven bij Gerritsen van Groningen B.V.
             a(href="/") Lees meer
       .swiper-slide
         .card-news-slider
-          img(src="images/card-why3.jpg" alt="")
+          img(src="images/card-why3.jpeg" alt="")
           .card-news-slider__body 
             h3 Nieuwe poederlakinstallatie bij Signatekst N.V.
             a(href="/") Lees meer
       .swiper-slide
         .card-news-slider
-          img(src="images/card-why3.jpg" alt="")
+          img(src="images/card-why3.jpeg" alt="")
           .card-news-slider__body 
             h3 Nieuwe elektrisch verwarmde kameroven bij Gerritsen van Groningen B.V.
             a(href="/") Lees meer
       .swiper-slide
         .card-news-slider
-          img(src="images/card-why3.jpg" alt="")
+          img(src="images/card-why3.jpeg" alt="")
           .card-news-slider__body 
             h3 Nieuwe poederlakinstallatie bij Signatekst N.V.
             a(href="/") Lees meer
       .swiper-slide
         .card-news-slider
-          img(src="images/card-why3.jpg" alt="")
+          img(src="images/card-why3.jpeg" alt="")
           .card-news-slider__body 
             h3 Nieuwe elektrisch verwarmde kameroven bij Gerritsen van Groningen B.V.
             a(href="/") Lees meer
@@ -98,15 +98,15 @@ mixin slider-news-item()
   .swiper.slider-photo.sticky-stop-bottom
     .swiper-wrapper
       .swiper-slide
-        img(src="images/card-why3.jpg" width="504" height="350" alt="")
+        img(src="images/card-why3.jpeg" width="504" height="350" alt="")
       .swiper-slide
-        img(src="images/card-why3.jpg" width="504" height="350" alt="")
+        img(src="images/card-why3.jpeg" width="504" height="350" alt="")
       .swiper-slide
-        img(src="images/card-why3.jpg" width="504" height="350" alt="")
+        img(src="images/card-why3.jpeg" width="504" height="350" alt="")
       .swiper-slide
-        img(src="images/card-why3.jpg" width="504" height="350" alt="")
+        img(src="images/card-why3.jpeg" width="504" height="350" alt="")
       .swiper-slide
-        img(src="images/card-why3.jpg" width="504" height="350" alt="")
+        img(src="images/card-why3.jpeg" width="504" height="350" alt="")
   .slider-photo__controls
     button.swiper-button-prev
       +svg('arrow-left')
