--- a/src/uikit.pug
+++ b/src/uikit.pug
@@ -437,8 +437,8 @@ block content
         div(data-collapse-content="content1") Toggle
       #video
         h3.h3 Video
-        +videoVimeo("./images/poster.jpg")
-        +videoVimeo("./images/poster.jpg")
+        +videoVimeo("./images/poster.jpeg")
+        +videoVimeo("./images/poster.jpeg")
 
       #icons
         h3.h3 Icons
