--- a/src/growth.pug
+++ b/src/growth.pug
@@ -20,7 +20,7 @@ block content
   section.section-growth 
     .container
       h2.section-growth__title.hidden.visible-desktop Breng KIEM naar jouw school
-      img(src="/images/content/growth/growth-page-content.svg" alt="Groei in onderwijs" width="557" height="380").section-growth__img
+      img(src="images/growth-page-content.svg" alt="Groei in onderwijs" width="557" height="380").section-growth__img
       .section-growth__content
         article.section-growth__text
           h2.hidden-desktop 
@@ -259,7 +259,7 @@ block content
         .contact-block.hidden.visible-desktop.growth
           .container
             .contact-block__item
-              img(src="/images/content/phone.svg" alt="alt" width="70" height="70")
+              img(src="images/phone.svg" alt="alt" width="70" height="70")
               .svg-wrapper
                 +svg("wave-long-left").wave-long
                 +svg("wave-name-left").wave-short
@@ -277,12 +277,12 @@ block content
               .svg-wrapper
                 +svg("wave-name-right").wave-short
                 +svg("wave-long-right").wave-long
-              img(src="/images/content/email.svg" alt="alt" width="70" height="70")
+              img(src="images/email.svg" alt="alt" width="70" height="70")
       
       .contact-block.hidden-desktop.growth
           .container
             .contact-block__item
-              img(src="/images/content/phone.svg" alt="alt" width="70" height="70")
+              img(src="images/phone.svg" alt="alt" width="70" height="70")
               .svg-wrapper
                 +svg("wave-long-left").wave-long
                 +svg("wave-name-left").wave-short
@@ -300,6 +300,6 @@ block content
               .svg-wrapper
                 +svg("wave-name-right").wave-short
                 +svg("wave-long-right").wave-long
-              img(src="/images/content/email.svg" alt="alt" width="70" height="70")
+              img(src="images/content/email.svg" alt="alt" width="70" height="70")
             
 
