--- a/src/home.pug
+++ b/src/home.pug
@@ -30,7 +30,7 @@ block content
   section.section-info-block
     .container.container-md
       .info-block
-        img(src="images/content/home_content1.svg" alt="logo KIEM." width="720" height="564")
+        img(src="images/home_content1.svg" alt="logo KIEM." width="720" height="564")
         .info-block__text
           h2 Groei in onderwijs
           p KIEM is er voor scholen die willen investeren in structurele ontwikkeling met blijvend effect. Of het nu gaat om tijdelijke ondersteuning, het versterken van de onderwijskwaliteit of het begeleiden van een team: wij denken mee en doen actief mee. We brengen beweging, energie en groei, zichtbaar in onze mensen, voelbaar in onze aanpak en merkbaar in de schoolpraktijk. Met op maat gemaakte trainingen, coaching en begeleidingstrajecten ondersteunen we scholen bij hun eigen ontwikkelvragen. We geloven in leren met lef, werken met hart en handelen met hoofd. KIEM staat voor groei in onderwijs en dat zie, voel en ervaar je.
@@ -45,19 +45,19 @@ block content
           +accordion-native(
             "KIEM bouwstenen",
             "Wil je werken aan onderwijskwaliteit, maar weet je niet waar te beginnen? Onze bouwstenen geven houvast, inspiratie en praktische tools. Zo werk je in je eigen tempo aan thema’s als vakmanschap in de klas, krachtig leiderschap, eigenaarschap en samenwerking in teams en kennisrijk en betekenisvol onderwijs.",
-            "images/content/accordion-image-1.svg",
+            "images/accordion-image-1.svg",
             true
           )
           +accordion-native(
             "Interim",
             "Soms heb je tijdelijk iemand nodig die instapt, meedraait en structuur brengt. KIEM biedt interim-professionals met ervaring, overzicht en daadkracht.",
-            "images/content/accordion-image-2.svg",
+            "images/accordion-image-2.svg",
             false
           )
           +accordion-native(
             "Coaching",
             "Goede coaching helpt mensen groeien. Bij KIEM bieden we begeleiding die is afgestemd op de persoon en de praktijk.",
-            "images/content/accordion-image-3.svg",
+            "images/accordion-image-3.svg",
             false
           )
 
@@ -69,10 +69,10 @@ block content
                 <a class="link__more" href="#">
                   <span class="link__more-title">Meer informatie</span>
                   <svg>
-                    <use xlink:href="./images/sprites.svg#arrow-right-bold"></use>
+                    <use xlink:href="images/sprites.svg#arrow-right-bold"></use>
                   </svg>
                 </a>
-                <img src="images/content/accordion-image-1.svg" alt="KIEM bouwstenen"/>
+                <img src="images/accordion-image-1.svg" alt="KIEM bouwstenen"/>
               </div>
             `,
           )
@@ -83,10 +83,10 @@ block content
                 <a class="link__more" href="#">
                   <span class="link__more-title">Meer informatie</span>
                   <svg>
-                    <use xlink:href="./images/sprites.svg#arrow-right-bold"></use>
+                    <use xlink:href="images/sprites.svg#arrow-right-bold"></use>
                   </svg>
                 </a>
-                <img src="images/content/accordion-image-2.svg" alt="Interim"/>
+                <img src="images/accordion-image-2.svg" alt="Interim"/>
               </div>
             `,
           )
@@ -97,10 +97,10 @@ block content
                 <a class="link__more" href="#">
                   <span class="link__more-title">Meer informatie</span>
                   <svg>
-                    <use xlink:href="./images/sprites.svg#arrow-right-bold"></use>
+                    <use xlink:href="images/sprites.svg#arrow-right-bold"></use>
                   </svg>
                 </a>
-                <img src="images/content/accordion-image-3.svg" alt="Coaching"/>
+                <img src="images/accordion-image-3.svg" alt="Coaching"/>
               </div>
               `,
           )
