--- a/src/about.pug
+++ b/src/about.pug
@@ -141,7 +141,7 @@ block content
         [
           {
             title: 'Madelon Boot',
-            img: 'images/madelon-circle.svg',
+            img: 'images/madelon-circle.jpeg',
             name: 'Madelon',
             content: `
               <p>Ik ben Madelon, een energieke leider met een scherpe blik en een groot hart voor onderwijs. Met jarenlange ervaring als schoolleider in diverse contexten, heb ik geleerd hoe je beweging creëert in teams en ruimte maakt voor duurzame ontwikkeling. Ik geloof in onderwijs dat recht doet aan iedere leerling, en dat professionals in hun kracht zet. Onderwijs dat echt werkt, of het nu gaat om een fusie, het ontwikkelen van zomerscholen, of het begeleiden van kwaliteitstrajecten.</p>
@@ -160,7 +160,7 @@ block content
           },
           {
             title: 'Manja Dobbe',
-            img: 'images/manja-circle.svg',
+            img: 'images/manja-circle.jpeg',
             name: 'Manja',
             content: `
               <p>Ik ben Manja – mensgericht leider met lef, visie en volle energie. Na jaren als schoolleider en bestuurlijk projectleider weet ik hoe je beweging krijgt in een team én in een organisatie. Ik geloof in onderwijs waarin professionals tot bloei komen en kinderen écht leren – met richting, ruimte en betekenis. Ik werk het liefst in scholen die het verschil willen maken voor hun leerlingen, zeker daar waar de uitdagingen groot zijn.</p>
