--- a/src/interim.pug
+++ b/src/interim.pug
@@ -49,7 +49,9 @@ block content
               <p>We ondersteunen mensen in het onderwijs om met meer plezier, impact en vertrouwen hun werk te doen.</p>
             `
           }
-        ]
+        ],
+        130,
+        154
       )
   
   section.contact-block.interim
@@ -77,5 +79,5 @@ block content
         .svg-wrapper
           +svg("wave-name-right").wave-short
           +svg("wave-long-right").wave-long
-        img(src="images/content/email.svg" alt="alt" width="70" height="70")
+        img(src="images/email.svg" alt="alt" width="70" height="70")
   
