--- a/src/pug/mixins/accordion.pug
+++ b/src/pug/mixins/accordion.pug
@@ -9,7 +9,7 @@ mixin accordion(title, content)
       article.article.accordion__content-vertical!= content
 
 mixin accordion-vertical-primary(title, content)
-  li.accordion-list__item.vertical-primary
+  .accordion-list__item.vertical-primary
     .accordion-vertical
       .accordion__header-vertical
         button.accordion__toggle(data-accordion aria-expanded="false")
@@ -23,20 +23,22 @@ mixin accordion-native(title, content, img, open = false)
     summary.accordion__summary
       .accordion__header
         h3.accordion__title.accordion__title--vertical= title
-        h3.accordion__title.accordion__title--horizontal= title
+        //- h3.accordion__title.accordion__title--horizontal= title
         .accordion__icons
           .accordion__icon-closed
-            +svg("arrow-left")
+            +svg('arrow-up-bold').hidden-laptop
+            +svg("arrow-left").visible-laptop
           .accordion__icon-opened
-            +svg("arrow-right")
+            +svg('arrow-down-bold').hidden-laptop
+            +svg("arrow-right").visible-laptop
     .accordion__content
       .accordion__text
         p= content
         if img
           .accordion__image
             img(src=img, alt=title)
-      a.link__more(href="#")
-        span.link__more-title Meer informatie
-        +svg("arrow-right-bold")
-      
+        a.link__more(href="#")
+          span.link__more-title Meer informatie
+          +svg("arrow-right-bold")
+        
 
