--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -56,7 +56,7 @@ $input-padding-y: 14px;
 $input-padding: $input-padding-x $input-padding-y;
 $input-hint-font-size: 14px;
 $input-padding-icon-x: $input-icon-width + $input-padding-x;
-$input-placeholder-color: $color-muted;
+$input-placeholder-color: $color-black;
 
 // Global cosmetic styles
 // ---------------------------------
