--- a/src/home.pug
+++ b/src/home.pug
@@ -21,7 +21,9 @@ block content
             br
             | voor scholen die vooruit willen
           a.link__more.hero__link(href="#")
-            span.link__more-title Verder groeien?
+            span.link__more-title
+              span Verder groeien?
+              span Plan een kennismaking
             +svg("arrow-right-bold")
         .hero__right
           img.visible-desktop(src="images/logo-kiem-k.svg" alt="logo KIEM." width="285" height="282")
@@ -30,18 +32,18 @@ block content
   section.section-info-block
     .container.container-md
       .info-block
-        img(src="images/home_content1.svg" alt="logo KIEM." width="720" height="564")
+        img(src="images/home_content1.jpg" alt="logo KIEM." width="720" height="564")
         .info-block__text
           h2 Groei in onderwijs
           p KIEM is er voor scholen die willen investeren in structurele ontwikkeling met blijvend effect. Of het nu gaat om tijdelijke ondersteuning, het versterken van de onderwijskwaliteit of het begeleiden van een team: wij denken mee en doen actief mee. We brengen beweging, energie en groei, zichtbaar in onze mensen, voelbaar in onze aanpak en merkbaar in de schoolpraktijk. Met op maat gemaakte trainingen, coaching en begeleidingstrajecten ondersteunen we scholen bij hun eigen ontwikkelvragen. We geloven in leren met lef, werken met hart en handelen met hoofd. KIEM staat voor groei in onderwijs en dat zie, voel en ervaar je.
           a(href="#").button Meer over ons
 
-  section
+  section.section-offer-block
     .container.container-md
       .offer-block
         h2 Ons aanbod voor groei
         p Onze werkwijze is praktisch en betrokken. Geen lange trajecten zonder richting, maar concrete stappen die werken in de praktijk. Met onze trainingen en begeleiding krijg je zicht op wat er staat en waar je naartoe kunt groeien.
-        ul.accordion-list.visible-1420
+        .accordion-list
           +accordion-native(
             "KIEM bouwstenen",
             "Wil je werken aan onderwijskwaliteit, maar weet je niet waar te beginnen? Onze bouwstenen geven houvast, inspiratie en praktische tools. Zo werk je in je eigen tempo aan thema’s als vakmanschap in de klas, krachtig leiderschap, eigenaarschap en samenwerking in teams en kennisrijk en betekenisvol onderwijs.",
@@ -61,46 +63,46 @@ block content
             false
           )
 
-        ul.accordion-list-mobile.hidden-1420
-          +accordion-vertical-primary(
-            "KIEM bouwstenen",
-            `<p>Wil je werken aan onderwijskwaliteit, maar weet je niet waar te beginnen? Onze bouwstenen geven houvast, inspiratie en praktische tools. Zo werk je in je eigen tempo aan thema’s als vakmanschap in de klas, krachtig leiderschap, eigenaarschap en samenwerking in teams en kennisrijk en betekenisvol onderwijs.</p>
-              <div>
-                <a class="link__more" href="#">
-                  <span class="link__more-title">Meer informatie</span>
-                  <svg>
-                    <use xlink:href="images/sprites.svg#arrow-right-bold"></use>
-                  </svg>
-                </a>
-                <img src="images/accordion-image-1.svg" alt="KIEM bouwstenen"/>
-              </div>
-            `,
-          )
-          +accordion-vertical-primary(
-            "Interim",
-            `<p>Soms heb je tijdelijk iemand nodig die instapt, meedraait en structuur brengt. KIEM biedt interim-professionals met ervaring, overzicht en daadkracht.</p>
-              <div>
-                <a class="link__more" href="#">
-                  <span class="link__more-title">Meer informatie</span>
-                  <svg>
-                    <use xlink:href="images/sprites.svg#arrow-right-bold"></use>
-                  </svg>
-                </a>
-                <img src="images/accordion-image-2.svg" alt="Interim"/>
-              </div>
-            `,
-          )
-          +accordion-vertical-primary(
-            "Coaching",
-            `<p>Goede coaching helpt mensen groeien. Bij KIEM bieden we begeleiding die is afgestemd op de persoon en de praktijk.</p>
-              <div>
-                <a class="link__more" href="#">
-                  <span class="link__more-title">Meer informatie</span>
-                  <svg>
-                    <use xlink:href="images/sprites.svg#arrow-right-bold"></use>
-                  </svg>
-                </a>
-                <img src="images/accordion-image-3.svg" alt="Coaching"/>
-              </div>
-              `,
-          )
+        //- .accordion-list
+        //-   +accordion-vertical-primary(
+        //-     "KIEM bouwstenen",
+        //-     `<p>Wil je werken aan onderwijskwaliteit, maar weet je niet waar te beginnen? Onze bouwstenen geven houvast, inspiratie en praktische tools. Zo werk je in je eigen tempo aan thema’s als vakmanschap in de klas, krachtig leiderschap, eigenaarschap en samenwerking in teams en kennisrijk en betekenisvol onderwijs.</p>
+        //-       <div>
+        //-         <a class="link__more" href="#">
+        //-           <span class="link__more-title">Meer informatie</span>
+        //-           <svg>
+        //-             <use xlink:href="images/sprites.svg#arrow-right-bold"></use>
+        //-           </svg>
+        //-         </a>
+        //-         <img src="images/accordion-image-1.svg" alt="KIEM bouwstenen"/>
+        //-       </div>
+        //-     `,
+        //-   )
+        //-   +accordion-vertical-primary(
+        //-     "Interim",
+        //-     `<p>Soms heb je tijdelijk iemand nodig die instapt, meedraait en structuur brengt. KIEM biedt interim-professionals met ervaring, overzicht en daadkracht.</p>
+        //-       <div>
+        //-         <a class="link__more" href="#">
+        //-           <span class="link__more-title">Meer informatie</span>
+        //-           <svg>
+        //-             <use xlink:href="images/sprites.svg#arrow-right-bold"></use>
+        //-           </svg>
+        //-         </a>
+        //-         <img src="images/accordion-image-2.svg" alt="Interim"/>
+        //-       </div>
+        //-     `,
+        //-   )
+        //-   +accordion-vertical-primary(
+        //-     "Coaching",
+        //-     `<p>Goede coaching helpt mensen groeien. Bij KIEM bieden we begeleiding die is afgestemd op de persoon en de praktijk.</p>
+        //-       <div>
+        //-         <a class="link__more" href="#">
+        //-           <span class="link__more-title">Meer informatie</span>
+        //-           <svg>
+        //-             <use xlink:href="images/sprites.svg#arrow-right-bold"></use>
+        //-           </svg>
+        //-         </a>
+        //-         <img src="images/accordion-image-3.svg" alt="Coaching"/>
+        //-       </div>
+        //-       `,
+        //-   )
