--- a/src/scss/components/accordion.scss
+++ b/src/scss/components/accordion.scss
@@ -1,85 +1,12 @@
-// .accordion-list {
-//   list-style-type: none;
+.accordion-list {
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
 
-//   @include desktop-l {
-//     display: flex;
-//   }
-// }
-
-// .accordion__content {
-//   overflow: hidden;
-//   transition-property: max-height;
-//   transition-duration: 0.5s;
-//   max-height: 0;
-// }
-
-// .accordion__toggle {
-//   z-index: 1;
-//   position: relative;
-//   display: flex;
-//   background: none;
-//   border: none;
-//   align-items: baseline;
-//   justify-content: space-between;
-//   width: 100%;
-//   padding: 0;
-//   overflow: hidden;
-// }
-
-// .accordion__toggle-icon,
-// .accordion__toggle-opened {
-//   position: absolute;
-//   top: 50%;
-//   right: 0;
-//   flex-shrink: 0;
-//   transform: translateY(-50%);
-
-//   svg {
-//     height: 14px;
-//     width: 14px;
-//   }
-// }
-
-// details>summary:first-of-type {
-//   list-style: none;
-
-//   .details__icon-opened {
-//     display: none;
-//   }
-
-//   .details__icon-closed {
-//     display: block;
-//   }
-// }
-
-// details[open]>summary:first-of-type {
-//   list-style-type: none;
-
-//   .details__icon-closed {
-//     display: none;
-//   }
-
-//   .details__icon-opened {
-//     display: block;
-//   }
-// }
-
-// .details__summary {
-//   display: flex;
-//   align-items: center;
-//   justify-content: space-between;
-// }
-
-// .details__icon-closed,
-// .details__icon-opened {
-//   width: 15px;
-//   height: 15px;
-// }
-
-// accordion
-li.accordion-list__item {
-  list-style: none;
-  padding: 0;
+  @include laptop {
+    flex-direction: row;
+    gap: 40px;
+  }
 }
 
 .accordion__toggle {
@@ -94,30 +21,32 @@ li.accordion-list__item {
   justify-content: space-between;
   transition: border-radius 0.3s ease;
 
-  h3 {
-    writing-mode: horizontal-tb;
-    transform: rotate(0deg);
-    margin-top: 0;
-    text-align: left;
-    font-size: 12px;
-  }
-
-  @include laptop {
-    padding: 28px 50px;
-
-    h3 {
-      text-align: center;
-    }
-  }
-
   @include tablet {
     height: 96px;
     padding: 20px 30px;
     border-radius: 15px;
+  }
+}
 
-    h3 {
-      font-size: 24px;
-    }
+.accordion__toggle h3 {
+  writing-mode: horizontal-tb;
+  transform: rotate(0deg);
+  margin-top: 0;
+  text-align: left;
+  font-size: 12px;
+
+  @include tablet {
+    font-size: 24px;
+  }
+}
+
+@include laptop {
+  .accordion__toggle {
+    padding: 28px 50px;
+  }
+
+  .accordion__toggle h3 {
+    text-align: center;
   }
 }
 
@@ -130,12 +59,14 @@ li.accordion-list__item {
   padding: 0 50px;
   margin-top: -15px;
   margin-bottom: 40px;
+}
 
-  ul {
-    display: none;
-  }
+.accordion__content-vertical ul {
+  display: none;
+}
 
-  @include desktop {
+@include desktop {
+  .accordion__content-vertical {
     margin-bottom: 45px;
   }
 }
@@ -145,17 +76,18 @@ li.accordion-list__item {
   padding: 0 50px 31px 10px;
   border-radius: 0 0 15px 15px;
   margin-bottom: 25px;
+}
 
+.accordion-vertical.is-open .accordion__content-vertical ul {
+  list-style-position: outside;
+  display: block;
+  min-width: 200px;
+  max-width: 800px;
+  margin-left: 10px;
+}
 
-  ul {
-    list-style-position: outside;
-    display: block;
-    min-width: 200px;
-    max-width: 800px;
-    margin-left: 10px;
-  }
-
-  @media (max-width: 470px) {
+@media (max-width: 470px) {
+  .accordion-vertical.is-open .accordion__content-vertical {
     padding: 0 20px 31px 0px;
   }
 }
@@ -182,170 +114,204 @@ li.accordion-list__item {
   transform: rotate(180deg);
 }
 
-// accordion-native
-
 .accordion {
-  overflow: hidden;
-  transition: max-width 0.3s ease;
-  max-width: 160px;
-  width: auto;
-  display: block;
-  margin-right: 40px;
-
-  &__summary {
-    cursor: pointer;
-
-    width: 32px;
-    min-height: 390px;
-    padding: 40px 64px;
-
-    list-style: none;
+  @include laptop {
+    overflow: hidden;
+    transition: max-width 0.5s ease-in-out;
+    height: 470px;
+    max-width: 160px;
+    width: auto;
     display: flex;
-    align-items: stretch;
-    justify-content: space-between;
-
-    background-color: $color-primary;
-    border-radius: 15px;
+    flex-wrap: wrap;
   }
+}
 
-  &[open] {
+.accordion__summary {
+  box-sizing: border-box;
+  cursor: pointer;
+  display: flex;
+  align-items: stretch;
+  justify-content: space-between;
+  background-color: $color-primary;
+  border-radius: 10px;
+
+  @include laptop {
+    border-radius: 15px;
+    width: 160px;
+    min-height: 470px;
+    padding: 52px 64px 40px;
+  }
+}
+
+.accordion[open] {
+  background-color: $color-floralwhite;
+  border-radius: 15px;
+
+  @include laptop {
     max-width: calc(100% - 400px);
-    background-color: $color-floralwhite;
-    padding: 40px 40px 40px 67px;
-    border-radius: 15px;
   }
+}
 
-  &[open] &__summary {
-    background-color: $color-floralwhite;
-    width: 100%;
-    min-height: fit-content;
-    flex-direction: row;
-    padding: 0;
+.accordion[open] .accordion__summary {
+  background-color: $color-floralwhite;
+  width: 100%;
+  min-height: fit-content;
+  flex-direction: row;
+  padding: 0;
+}
+
+.accordion[open] .accordion__header {
+  flex-direction: row;
+  align-items: flex-start;
+  padding: 20px 22px;
+
+  @include desktop {
+    padding: 52px 40px 24px 67px;
   }
+}
 
-  &[open] &__header {
-    flex-direction: row;
-    align-items: flex-start;
-  }
+.accordion__title {
+  margin-top: 15px;
+  margin-bottom: 0;
+  letter-spacing: -0.9px;
+}
 
-  &__title {
-    margin-top: 15px;
-    margin-bottom: 0;
-    letter-spacing: -0.9px;
-  }
+.accordion__title--vertical {
+  font-size: 30px;
+  letter-spacing: -0.3px;
 
-  &__title--vertical {
+  @include laptop {
     writing-mode: vertical-rl;
     transform: rotate(180deg);
     display: block;
     margin-bottom: 13px;
-    font-size: 30px;
-    letter-spacing: -0.3px;
-  }
-
-  &__title--horizontal {
-    writing-mode: horizontal-tb;
-    transform: none;
-    display: none;
-    font-size: 40px;
-  }
-
-  &[open] &__title--vertical {
-    display: none;
-  }
-
-  &[open] &__title--horizontal {
-    display: block;
-  }
-
-  &__header {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    width: 100%;
-    flex-direction: column-reverse;
-  }
-
-  &__icons {
-    display: flex;
-    align-items: center;
-
-    svg {
-      height: 32px;
-      width: 32px;
-      color: $color-white;
-    }
-  }
-
-  &[open] &__icons {
-    svg {
-      color: $color-orange;
-    }
-  }
-
-  &__icon-closed {
-    margin-bottom: 60px;
-  }
-
-  &__icon-closed,
-  &__icon-opened {
-    transition: opacity 0.3s ease;
-    position: relative;
-    flex-shrink: 0;
-  }
-
-  &__content {
-    max-width: 0;
-    overflow: hidden;
-    opacity: 0;
-    visibility: hidden;
-    transition:
-      max-width 0.3s ease,
-      opacity 0.15s ease 0.3s,
-      visibility 0s linear 0.3s;
-
-    a {
-      margin-top: 22px;
-    }
-
-    p {
-      max-width: 600px;
-    }
-  }
-
-  &[open] .accordion__content {
-    max-width: 100%;
-    opacity: 1;
-    visibility: visible;
-    transition:
-      max-width 0.3s ease,
-      opacity 0.15s ease,
-      visibility 0s linear;
-  }
-
-  &__text {
-    margin-top: 40px;
-    width: 100%;
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-
-    p {
-      width: 65%;
-      margin-bottom: 0;
-    }
-  }
-
-  &__image {
-    img {
-      max-width: 100%;
-      display: block;
-    }
   }
 }
 
-.accordion:last-child {
-  margin-right: 0;
+.accordion__title--vertical {
+  font-size: 24px;
+  margin-top: 0;
+
+  @include laptop {
+    writing-mode: vertical-rl;
+    transform: none;
+    font-size: 30px;
+    transform: rotate(180deg);
+  }
+}
+
+.accordion[open] .accordion__title--vertical {
+
+  @include laptop {
+    writing-mode: horizontal-tb;
+    transform: none;
+    font-size: 40px;
+    letter-spacing: -1px;
+  }
+}
+
+.accordion__header {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  width: 100%;
+  flex-direction: row;
+  padding: 20px 22px;
+
+  @include laptop {
+    padding: 0;
+    flex-direction: column-reverse;
+  }
+}
+
+.accordion__icons {
+  display: flex;
+  align-items: center;
+
+  @include desktop {
+    margin: -15px 0 0 0;
+  }
+}
+
+.accordion__icons svg {
+  width: 18px;
+  height: 18px;
+  color: $color-white;
+
+  @include laptop {
+    width: 36px;
+    height: 36px;
+  }
+}
+
+.accordion[open] .accordion__icons svg {
+  color: $color-orange;
+}
+
+.accordion__content .link__more {
+  margin-top: 22px;
+
+  @include laptop {
+    order: 1;
+    width: 100%;
+    margin-top: 16px;
+  }
+}
+
+.accordion__content p {
+  max-width: 100%;
+
+  @include laptop {
+    width: calc(70% - 10px);
+    padding-right: 10px;
+  }
+}
+
+.accordion[open] .accordion__content {
+  max-width: 100%;
+  transition: all 0.3s ease-in-out;
+  transition-delay: 0.5s;
+}
+
+.accordion__text {
+  width: auto;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  flex-wrap: wrap;
+  padding: 0 22px 30px 22px;
+
+  @include desktop {
+    padding: 0 90px 70px 67px;
+  }
+}
+
+.accordion__text p {
+  margin-top: 30px;
+  margin-bottom: 0;
+
+  @include laptop {
+    margin-top: 0;
+  }
+
+  @include desktop {
+    margin-top: 12px;
+  }
+}
+
+.accordion__image {
+  order: 1;
+  margin-left: auto;
+  max-width: 67px;
+
+  @include laptop {
+    width: 30%;
+    max-width: 120px;
+  }
+
+  @include desktop {
+    max-width: 210px;
+  }
 }
 
 .accordion__icon-opened {
@@ -360,80 +326,6 @@ li.accordion-list__item {
   display: none;
 }
 
-.accordion:nth-of-type(1) {
-  p {
-    width: 599px;
-  }
-
-  .accordion__image {
-    height: 214px;
-
-    img {
-      height: 214px;
-      margin-left: 54px;
-      margin-right: 71px;
-    }
-
-    @media (min-width: 1600px) and (max-width: 1740px) {
-      img {
-        height: 121px;
-        margin: 50% 0px;
-      }
-    }
-  }
-}
-
-.accordion:nth-of-type(2) {
-  .accordion__text {
-    margin-top: 20px;
-  }
-
-  p {
-    width: 387px;
-    margin-top: 28px;
-  }
-
-  img {
-    height: 214px;
-    margin-left: 148px;
-    margin-right: 168px;
-  }
-
-  @media (min-width: 1600px) and (max-width: 1740px) {
-    img {
-      height: 121px;
-    }
-  }
-}
-
-.accordion:nth-of-type(3) {
-  .accordion__text {
-    margin-top: 18px;
-  }
-
-  p {
-    width: 300px;
-    margin-top: 53px;
-  }
-
-  img {
-    height: 162px;
-    margin-left: 152px;
-    margin-right: 150px;
-    margin-top: 15px;
-  }
-
-  a {
-    margin-top: 45px;
-  }
-
-  @media (min-width: 1600px) and (max-width: 1740px) {
-    img {
-      height: 121px;
-      margin-left: 30px;
-    }
-  }
-}
 
 // accordion-vertical-primary
 .vertical-primary {
@@ -520,10 +412,4 @@ li.accordion-list__item {
   .accordion__content-vertical img {
     height: 40px;
   }
-}
-
-
-.accordion-list-mobile {
-  flex-direction: column;
-  margin-top: 44px;
 }
