--- a/src/scss/components/menu.scss
+++ b/src/scss/components/menu.scss
@@ -14,7 +14,21 @@
   align-items: center;
   overflow-x: hidden;
   padding: 40px;
-  background: conic-gradient(from 17.23deg at 20.92% 50.81%, rgba(255, 255, 255, 0) 0deg, rgba(169, 229, 47, 0.2) 80.68deg, rgba(203, 239, 130, 0.12053) 178.63deg, rgba(212, 242, 150, 0.100991) 206.7deg, rgba(255, 255, 255, 0) 360deg);
+  background: $color-white;
+
+  &:before {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: conic-gradient(from 17.23deg at 20.92% 50.81%, rgba(255, 255, 255, 0) 0deg, rgba(169, 229, 47, 0.2) 80.68deg, rgba(203, 239, 130, 0.12053) 178.63deg, rgba(212, 242, 150, 0.100991) 206.7deg, rgba(255, 255, 255, 0) 360deg);
+
+    @include laptop {
+      display: none;
+    }
+  }
 
   @include laptop {
     padding: 0;
@@ -129,6 +143,7 @@
   border: 0;
   padding: 0;
   transition: color 0.3s ease;
+  color: $color-secondary;
 
   @include laptop {
     font-size: 14px;
