--- a/src/scss/components/tabs.scss
+++ b/src/scss/components/tabs.scss
@@ -3,7 +3,7 @@
   position: relative;
 
   svg {
-    color: #ff9841;
+    color: $color-orange;
     width: 34px;
     height: 34px;
     position: absolute;
@@ -48,6 +48,8 @@
       color: $color-secondary;
       font-weight: 700;
       margin-top: 0;
+      letter-spacing: -1px;
+      margin-bottom: 32px;
     }
   }
 }
@@ -59,7 +61,7 @@
   padding: 0;
 
   @include desktop {
-    padding: 4.7% 9.9%;
+    padding: 80px 165px;
   }
 }
 
@@ -70,53 +72,41 @@
 }
 
 .tab-content-desktop .tab-content__item {
-  max-width: 35%;
+  max-width: 36%;
 }
 
 .tab-content__centered {
+  display: flex;
+  justify-content: center;
   position: absolute;
   top: 0;
-  left: 50%;
-  width: 250px;
+  left: 0;
+  right: 0;
+  width: 20%;
+  margin: 0 auto;
   height: 100%;
+
+  &::before {
+    content: "";
+    position: absolute;
+    top: 0;
+    right: 0;
+    left: 0;
+    margin: 0 auto;
+    height: 100%;
+    width: 2px;
+    background-color: $color-primary;
+  }
 
   img {
     position: absolute;
-    height: 254px;
-    left: -50%;
-    background-color: transparent;
-  }
+    top: 80px;
+    padding-bottom: 20px;
 
-  @include tablet {
-    img {
-      width: 200px;
-      height: 144px;
-      left: -40%;
-    }
-  }
-
-  @include desktop {
-    img {
+    @include desktop {
       background-color: $color-floralwhite;
-      height: 244px;
-      left: -50%;
-      width: 240px;
     }
   }
-}
-
-.tab-content__line:first-child {
-  width: 2px;
-  height: 55px;
-  margin-bottom: 0;
-  background-color: $color-primary;
-}
-
-.tab-content__line:last-child {
-  width: 2px;
-  height: calc(100% - 185px);
-  margin-top: 134px;
-  background-color: $color-primary;
 }
 
 .tabs {
@@ -173,74 +163,150 @@
 }
 
 // tabs-team
+.section-tabs-team {
+  padding-top: 54px;
+  padding-bottom: 34px;
+
+  @include desktop {
+    padding-top: 54px;
+    padding-bottom: 203px;
+  }
+}
 
 .tabs-team {
-  margin-top: 100px;
-  margin-bottom: 250px;
+  width: 100%;
+  height: fit-content;
+  display: flex;
+  flex-direction: column;
+  position: relative;
+  z-index: 3;
+  justify-content: space-between;
+
+
+}
+
+.tabs__team-title {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-bottom: 12px;
   position: relative;
 
-  .tabs__team-title svg {
-    color: #ff9841;
-    width: 53px;
-    height: 53px;
-    position: absolute;
-    top: 240px;
-    left: calc(50% - 26.5px);
+  h2 {
+    font-size: 20px;
+    letter-spacing: 0;
+    margin-bottom: 8px;
   }
 
-  h2 {
-    text-align: center;
-    color: $color-secondary;
-    margin-bottom: 40px;
-    font-size: 20px;
-    font-weight: 700;
-    letter-spacing: 0;
+  svg {
+    width: 34px;
+    height: 34px;
+    color: $color-orange;
+    top: 0;
   }
 
   @include desktop {
-    margin-bottom: 203px;
+    position: absolute;
+    top: 10px;
+    left: calc(50% - 75px);
+    z-index: 2;
 
-    .tabs__team-title svg {
-      top: 45px;
+    svg {
+      width: 53px;
+      height: 53px;
+      position: absolute;
+      top: 36px;
+      left: calc(50% - 26.5px);
+    }
+
+    h2 {
+      text-align: center;
+      color: $color-secondary;
+      margin-bottom: 40px;
+      font-weight: 700;
     }
   }
 }
 
-.tabs__team-title {
-  position: absolute;
-  top: 0;
-  left: calc(50% - 75px);
-  z-index: 2;
+.tabs__team-toggle {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  z-index: 3;
 }
 
-.tabs__team-rectangle {
+.tabs__toggle-img {
+  position: relative;
+  width: 122px;
+  height: 122px;
+
+  img {
+    width: 122px;
+    height: 122px;
+    border: 5px solid transparent;
+    border-radius: 50%;
+    transition: border 0.3s ease;
+    object-fit: cover;
+  }
+
+  @include laptop {
+    width: 240px;
+    height: 240px;
+
+    img {
+      width: 240px;
+      height: 240px;
+    }
+  }
+
+  @include desktop {
+    width: 360px;
+    height: 550px;
+
+    img {
+      width: 360px;
+      height: 550px;
+      border-radius: 0;
+    }
+  }
+}
+
+.tabs__toggle-rectangle {
   position: absolute;
   width: 100%;
   height: 409px;
   background-color: $color-floralwhite;
   border-radius: 30px;
   z-index: 1;
-  top: 66.5px
+  top: 70px
 }
 
-.tabs-team .tab-content-desktop {
-  z-index: 3;
-  justify-content: space-between;
+.tabs__toggle-img {
+  background-color: transparent;
 }
 
-.tabs-team .tab-content-desktop img {
-  width: 360px;
-  height: 550px;
-  margin-left: auto;
-  margin-right: auto;
+.tabs__toggle-img--left {
+  @include desktop {
+    margin-left: -60px;
+  }
 }
 
-.tabs-team .tab-content-desktop .tab-content__text {
-  margin-top: 70px;
+.tabs__toggle-img--right {
+  @include desktop {
+    margin-right: -60px;
+  }
+}
+
+.tab-content__text {
+  margin-top: -60px;
 
   h3 {
     font-size: 30px;
-    margin-bottom: 55px;
+    margin-bottom: 22px;
+
+    @include laptop {
+      margin-bottom: 55px;
+    }
   }
 
   div {
@@ -264,21 +330,38 @@
   }
 
   img {
+    display: none;
     width: 26px;
     height: 26px;
     margin: 0px 10px 0px 0px;
+
+    @include tablet {
+      display: block;
+    }
+  }
+
+  @include laptop {
+    margin-top: -120px;
   }
 
   @include desktop {
+    width: 44%;
+    margin-top: 70px;
+
     h3 {
       letter-spacing: -0.8px;
     }
   }
 }
 
-.tabs__team-container .tab-content-desktop .tab-content__item {
-  width: 45%;
-  max-width: 45%;
+.tab-content__item {
+  width: 100%;
+  max-width: 100%;
+
+  @include laptop {
+    width: 45%;
+    max-width: 45%;
+  }
 }
 
 .tabs__team-name {
@@ -289,151 +372,10 @@
   width: fit-content;
   align-items: center;
 
-  svg {
-    width: 150px;
-    color: $color-primary;
-  }
-
-  span {
-    width: fit-content;
-    height: fit-content;
-    font-family: $font-primary;
-    font-size: 30px;
-    font-weight: 700;
-    color: $color-primary;
-  }
-}
-
-.tabs__team-name--left {
-  top: 110px;
-  left: clamp(350px, 33%, 490px);
-
-  span {
-    margin-bottom: 20px;
-  }
-}
-
-.tabs__team-name--right {
-  top: 320px;
-  right: clamp(380px, 33%, 520px);
-
-  span {
-    margin-top: -29px;
-    margin-right: -28px;
-  }
-
-  svg {
-    width: 165px;
-    color: $color-primary;
-  }
-}
-
-.tab-content__img-wrapper {
-  position: relative;
-  width: 360px;
-  height: 550px;
-  margin-left: auto;
-  margin-right: auto;
-}
-
-.tab-img,
-.tab-img-hover {
-  position: absolute;
-  top: 0;
-  left: 0;
-  transition: opacity 0.3s ease;
-  width: 100%;
-  height: 100%;
-}
-
-.tab-img-hover {
-  opacity: 0;
-}
-
-.tab-content__img-wrapper:hover .tab-img-hover {
-  opacity: 1;
-}
-
-.tab-content__img-wrapper:hover .tab-img {
-  opacity: 0;
-}
-
-// tabs-team-mobile
-
-.tabs-team-momile {
-  width: 100%;
-  height: fit-content;
-  display: flex;
-  flex-direction: column;
-  margin-top: 65px;
-  margin-bottom: 84px;
-}
-
-.team-mobile__title {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  margin-bottom: 12px;
-
-  h2 {
-    font-size: 20px;
-    letter-spacing: 0;
-    margin-bottom: 8px;
-  }
-
-  svg {
-    width: 34px;
-    height: 34px;
-    color: $color-orange;
-  }
-}
-
-.team-mobile__container {
-  width: 100%;
-  height: fit-content;
-  padding: 162px 30px 80px 40px;
-  background-color: $color-floralwhite;
-  border-radius: 30px;
-  margin-top: 78px;
-  position: relative;
-
-  @include laptop {
-    margin-top: 175px;
-    padding: 240px 60px 60px 60px;
-  }
-}
-
-.team-mobile__toggle {
-  width: 100%;
-  height: 300px;
-  display: flex;
-  flex-direction: row;
-  justify-content: space-evenly;
-  position: absolute;
-  top: -155px;
-  left: 0;
-
-  @include laptop {
-    top: -160px;
-  }
-}
-
-.team-toggle__item {
-  background-color: transparent;
-
   .svg-wrapper {
-    overflow: hidden;
-    position: absolute;
     width: 57px;
     height: 50px;
-  }
-
-  img {
-    width: auto;
-    height: 41%;
-    border: 5px solid transparent;
-    border-radius: 50%;
-    transition: border 0.3s ease;
+    background-color: transparent;
   }
 
   svg {
@@ -452,11 +394,6 @@
   }
 
   @include laptop {
-    img {
-      width: 240px;
-      height: 240px;
-    }
-
     .svg-wrapper {
       width: 105px;
       height: 110px;
@@ -470,42 +407,52 @@
       font-size: 26px;
     }
   }
-}
 
-.team-toggle__item:first-child {
+  @include desktop {
+    flex-direction: row;
+    width: fit-content;
+    align-items: center;
 
-  .svg-wrapper {
-    top: 210px;
-    left: clamp(100px, 29%, 390px);
-  }
-
-  svg {
-    transform: scaleY(-1) rotate(-90deg);
-    color: $color-muted;
-  }
-
-  span {
-    top: 252px;
-    left: calc(clamp(100px, 29%, 390px) - 60px);
-  }
-
-  @media (max-width: 390px) {
     .svg-wrapper {
-      top: 205px;
-      left: 83px;
+      width: 165px;
+      height: 150px;
+    }
+
+    svg {
+      width: 150px;
+      height: 132px;
+      color: $color-primary;
     }
 
     span {
-      top: 242px;
-      left: 25px;
+      position: relative;
+      width: fit-content;
+      height: fit-content;
+      font-family: $font-primary;
+      font-size: 30px;
+      font-weight: 700;
+      color: $color-primary;
     }
+  }
+}
+
+.tabs__team-name--left {
+  top: 185px;
+  left: clamp(80px, 27%, 390px);
+
+  span {
+    top: 37px;
+    left: -70px;
+  }
+
+  svg {
+    transform: scaleY(-1) rotate(-138deg);
+    transform-origin: center center;
   }
 
   @include laptop {
-    .svg-wrapper {
-      top: 230px;
-      left: clamp(200px, 34%, 390px);
-    }
+    top: 260px;
+    left: clamp(200px, 34%, 390px);
 
     svg {
       transform: scaleY(-1) rotate(-90deg);
@@ -513,45 +460,44 @@
     }
 
     span {
-      top: 312px;
-      left: calc(clamp(200px, 34%, 390px) - 80px);
+      top: 83px;
+      left: -55px;
+    }
+  }
+
+  @include desktop {
+    top: 110px;
+    left: clamp(320px, 33%, 490px);
+
+    svg {
+      transform: scaleY(1) rotate(0deg);
+    }
+
+    span {
+      top: 0;
+      left: 0;
+      margin-bottom: 20px;
     }
   }
 }
 
-.team-toggle__item:last-child {
-  .svg-wrapper {
-    top: 212px;
-    right: clamp(70px, 25%, 390px);
-  }
+.tabs__team-name--right {
+  top: 190px;
+  right: clamp(70px, 25%, 390px);
 
   svg {
     transform: scaleY(-1) rotate(130deg);
     transform-origin: center center;
-    color: $color-muted;
   }
 
   span {
-    top: 250px;
-    right: calc(clamp(70px, 25%, 390px) - 45px);
-  }
-
-  @media (max-width: 400px) {
-    .svg-wrapper {
-      top: 210px;
-      right: 75px;
-    }
-
-    span {
-      top: 246px;
-    }
+    top: 65px;
+    right: -15px;
   }
 
   @include laptop {
-    .svg-wrapper {
-      top: 238px;
-      right: clamp(200px, 32%, 390px);
-    }
+    top: 288px;
+    right: clamp(200px, 28%, 390px);
 
     svg {
       transform: scaleY(-1) rotate(130deg);
@@ -559,54 +505,107 @@
     }
 
     span {
-      top: 315px;
-      right: calc(clamp(200px, 32%, 390px) - 60px);
+      top: 105px;
+      right: -30px;
+    }
+  }
+
+  @include desktop {
+    top: 320px;
+    right: clamp(350px, 33%, 520px);
+
+    span {
+      margin-top: -29px;
+      margin-right: -28px;
+      top: 0;
+      left: 0;
+    }
+
+    svg {
+      transform: scaleY(1) rotate(0deg);
     }
   }
 }
 
-.team-mobile__text {
-  h3 {
-    font-size: 27px;
-    color: $color-secondary;
-    letter-spacing: 0;
-    margin-bottom: 23px;
-  }
+.tab-img,
+.tab-img-hover {
+  position: absolute;
+  top: 0;
+  left: 0;
+  transition: opacity 0.3s ease;
+  width: 100%;
+  height: 100%;
+}
 
-  div {
-    margin-top: 34px;
-    display: flex;
-    flex-direction: column;
-  }
+.tab-img-hover {
+  opacity: 0;
+}
 
-  a {
-    text-decoration: none;
-  }
-
-  a:nth-child(2) {
-    color: $color-secondary;
-    font-weight: 700;
-    text-decoration: underline;
-    margin-top: 5px;
+.tabs__toggle-img:hover .tab-img-hover {
+  @include desktop {
+    opacity: 1;
   }
 }
 
-.team-mobile__text {
+.tabs__toggle-img:hover .tab-img {
+  @include desktop {
+    opacity: 0;
+  }
+}
+
+.tabs__team-container {
+  display: flex;
+  flex-direction: column;
+
+  @include desktop {
+    flex-direction: row;
+    justify-content: space-between;
+  }
+}
+
+.tab-content__text {
   display: none;
-}
 
-.team-mobile__text[aria-expanded="true"] {
-  display: block;
-}
-
-.team-toggle__item[aria-expanded="true"] {
-  img {
-    border: 5px solid $color-primary;
-    border-radius: 50%;
+  &[aria-expanded="true"] {
+    display: block;
   }
 
-  svg,
+  @include desktop {
+    display: block;
+  }
+}
+
+.tab-content__text[aria-expanded="true"] {
+  background-color: $color-floralwhite;
+  border-radius: 30px;
+  padding: 170px 40px 40px 40px;
+
+  @include laptop {
+    padding: 260px 40px 40px 40px;
+  }
+
+  @include desktop {
+    padding: 0px;
+    background-color: transparent;
+  }
+}
+
+.tabs__toggle-img[aria-expanded="true"] img {
+  border: 5px solid $color-primary;
+  border-radius: 50%;
+
+  @include desktop {
+    border: none;
+    border-radius: 0;
+  }
+}
+
+.tabs__team-name.active {
+  svg {
+    fill: $color-primary;
+  }
+
   span {
-    color: $color-primary
+    color: $color-primary;
   }
 }
