--- a/src/scss/pages/growth.scss
+++ b/src/scss/pages/growth.scss
@@ -102,6 +102,7 @@
 }
 
 .section-growth__accordion {
+  list-style-type: none;
   margin-right: 0;
   margin-top: 23px;
 
@@ -175,6 +176,7 @@
 }
 
 .growth-tabs__title-close {
+  color: $color-text-secondary;
   font-size: 20px;
   line-height: 1.3;
   text-align: center;
@@ -186,6 +188,7 @@
 }
 
 .growth-tabs__subtitle-close {
+  color: $color-text-secondary;
   margin-top: 6px;
   text-align: center;
 }
@@ -222,7 +225,7 @@
 }
 
 .growth-tabs__title-open {
-  color: $color-text-default;
+  color: $color-text-secondary;
   margin-bottom: 9px;
   font-size: 20px;
   letter-spacing: -1.3px;
@@ -238,6 +241,7 @@
 }
 
 .growth-tabs__subtitle-open {
+  color: $color-text-secondary;
   margin-top: 0;
   margin-bottom: 17px;
 
